--- a/src/Page/Home/Home.module.scss
+++ b/src/Page/Home/Home.module.scss
@@ -1,3 +1,10 @@
+.container {
+    max-width: 1140px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
 .home {
     background: url("../../assets/videp-ezgif.com-optimize.gif");
     height: 100vh;
