--- a/src/Page/Home/Home.module.scss
+++ b/src/Page/Home/Home.module.scss
@@ -6,19 +6,18 @@
 }
 
 .home {
-    background: url("../../assets/videp-ezgif.com-optimize.gif");
     height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     position: relative;
+    overflow: hidden;
 
-    &-2 {
-        background: url("../../assets/1234.jpg");
-        height: 100vh;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
+    &__video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        // width: 1200px;
+        height: 860px;
+        z-index: 0;
+        margin-top: -80px;
     }
 
     &__wrapper {
@@ -63,7 +62,7 @@
     background-color: #0000009f;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: 1;
 }
 
 .contact {
@@ -151,6 +150,15 @@
             }
         }
 
+        &__video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 860px;
+            z-index: 0;
+            margin-left: -550px;
+        }
+
         &__text {
             color: #fff;
             text-align: center;
@@ -170,6 +178,15 @@
             img {
                 width: 100%;
             }
+        }
+
+        &__video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 860px;
+            z-index: 0;
+            margin-left: -550px;
         }
 
         &__text {
