--- a/src/Page/Home/Home.module.scss
+++ b/src/Page/Home/Home.module.scss
@@ -6,15 +6,41 @@
 }
 
 .home {
+    // background: url("../../assets/IMG_2272.MP4");
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    width: 100%;
     height: 100vh;
     position: relative;
     overflow: hidden;
+
+    &__iframe-desc {
+        width: 150%;
+        height: 150%;
+        margin-left: -400px;
+        margin-top: -100px;
+        position: absolute;
+        z-index: 0;
+        display: block;
+
+    }
+
+    &__iframe-mob {
+        width: 150%;
+        height: 150%;
+        margin-left: -400px;
+        margin-top: -100px;
+        position: absolute;
+        z-index: 0;
+        display: none;
+
+    }
 
     &__video {
         position: absolute;
         top: 0;
         left: 0;
-        // width: 1200px;
         height: 860px;
         z-index: 0;
         margin-top: -80px;
@@ -140,6 +166,33 @@
     }
 }
 
+@media(max-width:860px) {
+    // .home {
+    //     &__iframe-desc {
+    //         margin-left: 0;
+    //         margin-top: -140px;
+    //         height: 100vh;
+    //         width: 100%;
+
+    //     }
+    // }
+}
+
+@media(max-width:760px) {
+    .home {
+        &__iframe-desc {
+            display: none;
+
+        }
+
+        &__iframe-mob {
+            display: block;
+            margin-left: -180px;
+            height: 1300px;
+        }
+    }
+}
+
 @media(max-width:621px) {
     .home {
         &__logo {
@@ -212,6 +265,17 @@
             img {
                 width: 100%;
             }
+        }
+    }
+}
+
+@media(max-width:400px) {
+    .home {
+        &__iframe-mob {
+            display: block;
+            margin-left: -150px;
+            height: 1300px;
+            margin-top: -250px;
         }
     }
 }
