--- a/src/Page/Home/Home.module.scss
+++ b/src/Page/Home/Home.module.scss
@@ -16,10 +16,10 @@
     overflow: hidden;
 
     &__iframe-desc {
-        width: 130%;
-        height: 130%;
-        margin-left: -250px;
-        margin-top: -100px;
+        width: 150%;
+        height: 150%;
+        margin-left: -400px;
+        margin-top: -150px;
         position: absolute;
         z-index: 0;
         display: block;
@@ -158,25 +158,22 @@
     }
 }
 
-@media(max-width:700px) {
-    .contact {
-        &__item {
-            height: 60px;
+@media(max-width:1067px) {
+    .home {
+        &__iframe-desc {
+            width: 150%;
+            height: 150%;
+            margin-left: -250px;
+            margin-top: -150px;
+            position: absolute;
+            z-index: 0;
+            display: block;
+
         }
     }
 }
 
-@media(max-width:860px) {
-    // .home {
-    //     &__iframe-desc {
-    //         margin-left: 0;
-    //         margin-top: -140px;
-    //         height: 100vh;
-    //         width: 100%;
 
-    //     }
-    // }
-}
 
 @media(max-width:760px) {
     .home {
@@ -187,11 +184,21 @@
 
         &__iframe-mob {
             display: block;
-            margin-left: -100px;
+            margin-left: -185px;
             height: 1300px;
+            margin-top: -300px;
         }
     }
 }
+
+@media(max-width:700px) {
+    .contact {
+        &__item {
+            height: 60px;
+        }
+    }
+}
+
 
 @media(max-width:621px) {
     .home {
@@ -273,9 +280,9 @@
     .home {
         &__iframe-mob {
             display: block;
-            margin-left: -150px;
+            margin-left: -70px;
             height: 1300px;
-            margin-top: -250px;
+            margin-top: -300px;
         }
     }
 }
